--- a/project/practise hero/style.css
+++ b/project/practise hero/style.css
@@ -9,10 +9,20 @@ body {
     font-weight: 700;
 }
 
-#welcome {
+section {
     display: flex;
+    margin-bottom: 80px;
+}
+
+#welcome {
     background-image: url(./images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+#about {
+    background-image: url(./images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .half-width {
@@ -41,4 +51,43 @@ a:hover {
     padding: 10px 40px;
     cursor: pointer;
     transition-delay: 0.1s all ease;
+}
+
+.flexiable-contain {
+    display: flex;
+    margin-bottom: 80px;
+    margin-top: 100px;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding-left: 15px;
+}
+
+.experience-item:hover {
+    box-shadow: 10px 10px 20px gray;
+}
+
+#experience {
+    background-image: url(./images/dream-bg.png);
+    background-repeat: no-repeat;
+}
+
+#full-stack {
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, orange);
+    border-image-slice: 1;
+}
+
+#front-end {
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, orange);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
 }
