--- a/project/day1,2,3/style.css
+++ b/project/day1,2,3/style.css
@@ -1,3 +1,45 @@
-h3 {
-    color: red;
+nav>ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: green;
+}
+
+nav ul li {
+    list-style: none;
+    padding: 10px;
+    text-align: center;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    font-size: larger;
+    color: white;
+}
+
+nav ul li:hover {
+    background-color: gray;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    margin: 0;
+}
+
+nav>ul>li:hover>.dropdown {
+    display: block;
+    background-color: green
+}
+
+.dropdown li a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
 }
